投影描画の色変換を厳密化＆デフォルト色を白に変更
ProjectionRenderer.RenderProjectionにフォールバック色引数を追加し、Color4からWPF Colorへの変換を正確に修正。個別色がない場合の色指定が可能になりました。また、ScatterModelのデフォルト色をDodgerBlueからWhiteに変更し、色情報の一貫性と正確性を向上させました。

--- a/MultiDimensionwScatter/MainWindow.xaml
+++ b/MultiDimensionwScatter/MainWindow.xaml
@@ -44,11 +44,12 @@
                                          Color="DodgerBlue"
                                          Thickness="1.0" />
 
+                <!-- モデルカラーは白にしておく -->
                 <sdx:PointGeometryModel3D x:Name="ScatterModel"
                                           Geometry="{Binding ScatterGeometry}"
                                           Size="1.5 1.5"
                                           Figure="Ellipse"
-                                          Color="DodgerBlue" />
+                                          Color="White" />
                 <sdx:DirectionalLight3D Direction="-1,-1,-1"
                                         Color="White" />
             </sdx:Viewport3DX>
